# google_test_template

./: CMakeLists.txt  example.cpp  example.h  readme.md
inc/: class_a.h
template1/: CMakeLists.txt  class_c.hpp  readme.md
template1/inc/: class_b.h
template1/test/: template_test.cpp
template2/: CMakeLists.txt  readme.md  template_test.h
template3/: CMakeLists.txt  class_a.cpp  readme.md
template3/src/: class_b.cpp  main.cpp
test/: CMakeLists.txt  example_test.cpp  example_test.h  exampletest.cpp  test1.cpp
